Make ID based rules class based

--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -274,16 +274,16 @@ html.js fieldset.collapsible .fieldset-wrapper {
 		padding: 0 5px;
 		}
 }
-#thread {
+.thread {
 	margin-bottom: 70px;
 }
-#thread-author .rank {
+.thread-author .rank {
 	float: none;
 }
-#thread-intro {
+.thread-intro {
 	padding-bottom: 8px;
 }
-#thread-text {
+.thread-text {
 	padding: 20px;
 	margin-bottom: 10px;
 	background-color: #f0f0f0;
