--- a/site/public/stylesheets/bootstrap.css
+++ b/site/public/stylesheets/bootstrap.css
@@ -811,7 +811,6 @@ textarea[readonly] {
   cursor: not-allowed; }
 
 .control-group.warning > label,
-.control-group.warning .help-block,
 .control-group.warning .help-inline {
   color: #c09853; }
 .control-group.warning input,
@@ -833,7 +832,6 @@ textarea[readonly] {
   border-color: #c09853; }
 
 .control-group.error > label,
-.control-group.error .help-block,
 .control-group.error .help-inline {
   color: #b94a48; }
 .control-group.error input,
@@ -855,7 +853,6 @@ textarea[readonly] {
   border-color: #b94a48; }
 
 .control-group.success > label,
-.control-group.success .help-block,
 .control-group.success .help-inline {
   color: #468847; }
 .control-group.success input,
@@ -3125,7 +3122,7 @@ input:focus, textarea:focus {
   -moz-box-shadow: 0;
   box-shadow: 0; }
 
-.control-group.warning > label, .control-group.warning .help-block, .control-group.warning .help-inline {
+.control-group.warning > label, .control-group.warning .help-inline {
   color: #FF9F00; }
 
 .control-group.warning input, .control-group.warning select, .control-group.warning textarea {
@@ -3143,7 +3140,7 @@ input:focus, textarea:focus {
   background-color: #fcf8e3;
   border-color: #FF9F00; }
 
-.control-group.error > label, .control-group.error .help-block, .control-group.error .help-inline {
+.control-group.error > label, .control-group.error .help-inline {
   color: #cc0000; }
 
 .control-group.error input, .control-group.error select, .control-group.error textarea {
@@ -3161,7 +3158,7 @@ input:focus, textarea:focus {
   background-color: #f2dede;
   border-color: #cc0000; }
 
-.control-group.success > label, .control-group.success .help-block, .control-group.success .help-inline {
+.control-group.success > label, .control-group.success .help-inline {
   color: #95a321; }
 
 .control-group.success input, .control-group.success select, .control-group.success textarea {
