detailing buzz section and other minor things home related

--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -45,7 +45,9 @@ $loginBackgroundColor:          $openshiftDarkBackgroundGray;
 $loginColor:                    white;
 
 $signupLinkColor:               $openshiftLinkGray;
-$textDarkBackground:            white;
+$textDarkBackground:            #777;
+$subtleTextDarkBackground:			#434343;
+$linkTextDarkBackground:				#fff;
 $darkBackground:                $openshiftAlmostBlack;
 $textLightBackground:           white;
 $lightBackground:               white;
