--- a/site/app/stylesheets/site/_navbar.scss
+++ b/site/app/stylesheets/site/_navbar.scss
@@ -51,6 +51,7 @@
         /* reset styles */
         padding: 5px 0;
         border-radius: 0;
+        text-shadow:0 1px 1px rgba(0, 0, 0, 0.5)
       }
     }
 
