--- a/site/app/views/layouts/simple.html.haml
+++ b/site/app/views/layouts/simple.html.haml
@@ -3,29 +3,33 @@
 
 !!! 5
 -# http://paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither
--ie_html :class => 'no-js console console-transition', :lang => 'en' do
+-ie_html :class => 'no-js', :lang => 'en' do
   %head
     = render "layouts/head"
     = render "layouts/site/stylesheets"
 
-  %body{ :class => "#{controller.controller_name} #{controller.action_name}" }
-    = outage_notification
+  %body{ :class => "box #{controller.controller_name} #{controller.action_name}" }
 
     %header
-      = render 'layouts/simple/header'
+      = render 'layouts/site/header_simple'
 
-    = flashes
+    - if content_for? :important_layout
+      = yield :important_layout
 
-    - if content_for?(:sub_layout) 
+    -#= content_for?(:sub_layout) ? yield(:sub_layout) : yield
+    - if content_for? :sub_layout
       = yield :sub_layout
     - else
-      .container#content
-        = yield
+      .section-striped#content
+        .container
+          .row-content
+            .row-fluid.row-flush-right
+              .column-content.lift-less.span-wrapper
+                .box.span-flush-right
+                  = flashes
+                  = yield
 
-    %footer
-      = render 'layouts/simple/footer'
-
-    = render 'layouts/javascripts'
+    = render 'layouts/site/javascripts'
 
     -# Omniture code will not load in devenvs to force it to load, just comment out if statement
     = render('shared/omniture_code', :controller => controller.controller_name, :action => controller.action_name, :event => @event ||= '', :evar8 => @evar8 ||= '') if Rails.env.production?
