Switch to grid based column layout, fix problems with offset* and span-wrapper in various scenarios

--- a/site/app/stylesheets/_grid.scss
+++ b/site/app/stylesheets/_grid.scss
@@ -1,6 +1,6 @@
 // Allow a span to be implicitly wrapped to set grid backgrounds, while allowing 
 // a responsive stylesheet to know about the wrapper.
-.row > .span-wrapper {
+.span-wrapper {
   margin-left: 0; // overrides the corresponding style from 'span'
 }
 
