--- a/site/app/views/login/show.html.haml
+++ b/site/app/views/login/show.html.haml
@@ -1,7 +1,8 @@
+- content_for :title, 'Login'
 - input_html = { :class => input_class } if defined? input_class
 
 %h1.ribbon
-  .ribbon-content Sign in to shift your App to the cloud
+  .ribbon-content Sign in to OpenShift 
   .ribbon-left
 
 #login-form
