--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -4,7 +4,9 @@
   .messaging
     .container
       .primary.headline
-        Shift your App to the Cloud
+        Shift your 
+        %strong App
+        to the Cloud
       .secondary
         Start your journey into the cloud with the answers you need.
 
@@ -16,13 +18,13 @@
 
 %section
   :markdown
-    OpenShift is Red Hat's Cloud Computing Platform-as-a-Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
+    OpenShift is Red Hat's Cloud Computing Platform as a Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
 
     <!--![OpenShift PaaS Illustration](/app/images/overview-paas.png)-->
 
   %a{:name => 'code'}
   :markdown
-    ## Code on.
+    ## How do I use OpenShift?
 
     For a Developer to use OpenShift to take advantage of the power and elasticity of the Cloud, they need only do the following:
 
