--- a/site/app/stylesheets/common.scss
+++ b/site/app/stylesheets/common.scss
@@ -25,8 +25,8 @@
 
 // Grid system and page structure
 @import "bootstrap/scaffolding";
+@import "grid"; // our grid defaults should have lower CSS priority than grids
 @import "bootstrap/grid";
-@import "grid";
 @import "bootstrap/layouts";
 
 // Base CSS
