Change multi-element ribbon headers to single element headers

--- a/site/app/views/styleguide/community.html.haml
+++ b/site/app/views/styleguide/community.html.haml
@@ -69,8 +69,7 @@
         .column-content.lift.span-wrapper
           .span9.span-flush-right
             %h1.ribbon
-              .ribbon-content OpenShift Blog
-              .ribbon-left
+              OpenShift Blog
             .post-info
               .author
                 %span{:style => 'display: inline-block; height: 24px; width: 24px; background-color: #555;'} P
