--- a/site/app/views/styleguide/overview.html.haml
+++ b/site/app/views/styleguide/overview.html.haml
@@ -10,8 +10,7 @@
   = take_action new_web_user_path, 'Sign up to try <strong>OpenShift</strong>'
 
 %h1.ribbon
-  .ribbon-content What is OpenShift?
-  .ribbon-left
+  What is OpenShift?
 
 %section
   :markdown
