--- a/site/app/views/styleguide/signup.html.haml
+++ b/site/app/views/styleguide/signup.html.haml
@@ -17,8 +17,7 @@
       .offset3.span6
         .column-content.box-content
           %h1.ribbon
-            .ribbon-content Signup
-            .ribbon-left
+            Signup
 
           %p some content
 
