--- a/site/app/views/login/show.html.haml
+++ b/site/app/views/login/show.html.haml
@@ -4,24 +4,25 @@
   .ribbon-content Sign in to shift your App to the cloud
   .ribbon-left
 
-= form_tag(login_path, :class => 'form-horizontal') do
-  %input(type="hidden" value="✓" name="utf8")
-  %input{:type => "hidden", :value => form_authenticity_token, :name => "authenticity_token"}
-  %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? @redirectUrl : '/app/console') }
-  %input{:type => "hidden", :name => "errorUrl",  :value => (defined?(@errorUrl) ? @errorUrl : '/app/new/signup') }
-  %fieldset
-    .control-group
-      %label.control-label{:for => 'login_input'}
-        Login
-      .controls
-        %input{:required => true, :placeholder => 'Your redhat.com or RHN account', :value => session[:confirm_login] ? session[:confirm_login] : '', :name => "login",  :id => "login_input"}
-    .control-group
-      %label.control-label{:for => 'pwd_input'}
-        Password
-      .controls
-        %input(id="pwd_input" type="password" name="password" autocomplete="off" required="true")
-        %a{:href => '/app/user/request_password_reset_form'} forgot?
-    .form-actions
-      %input(type="submit" value="Sign in" class="btn")
-      or
-      %a{:href => '/app/account/new'} create an account
+#login-form
+  = form_tag(login_ajax_path, :class => 'form-horizontal') do
+    %input(type="hidden" value="✓" name="utf8")
+    %input{:type => "hidden", :value => form_authenticity_token, :name => "authenticity_token"}
+    %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? @redirectUrl : '/app/console') }
+    %input{:type => "hidden", :name => "errorUrl",  :value => (defined?(@errorUrl) ? @errorUrl : '/app/new/signup') }
+    %fieldset
+      .control-group
+        %label.control-label{:for => 'login_input'}
+          Login
+        .controls
+          %input{:required => true, :placeholder => 'Your redhat.com or RHN account', :value => session[:confirm_login] ? session[:confirm_login] : '', :name => "login",  :id => "login_input"}
+      .control-group
+        %label.control-label{:for => 'pwd_input'}
+          Password
+        .controls
+          %input(id="pwd_input" type="password" name="password" autocomplete="off" required="true")
+          %a{:href => '/app/user/request_password_reset_form'} forgot?
+      .form-actions
+        %input(type="submit" value="Sign in" class="btn")
+        or
+        %a{:href => '/app/account/new'} create an account
