Show openshift tweets until we have recommendation content For login page show a button that is not btn-primary (allow form to override btn-primary)

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -440,6 +440,16 @@ body.signup {
      margin-left: 105px;
      color: $subtleTextDarkBackground;
     }
+
+    > p:first-child {
+      margin-left: 0;
+      &:before {
+        border: 0;
+      }
+    }
+    > small:nth-child(2) {
+      margin-left: 15px;
+    }
   }
 
   > .callout {
