Fix navigation bar styles for thick underlines, make clickable area larger.

--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -1,3 +1,6 @@
+$baseFontFamily:      "Helvetica Neue", Helvetica, "Liberation Sans", Arial, sans-serif;
+$headerFontFamily:    Overpass, "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 $responsivePhone:         480px;
 $responsiveTablet:        768px;
 $responsiveDefault:       980px;
