--- a/site/app/stylesheets/site/_navbar.scss
+++ b/site/app/stylesheets/site/_navbar.scss
@@ -11,7 +11,7 @@
     margin: 0;
     padding: 0;
     font-size: 17px;
-    font-family:Overpass, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: $headerFontFamily;
     text-shadow: none;
   }
 
@@ -49,7 +49,7 @@
         text-transform: uppercase; 
         font-weight: bold;
         /* reset styles */
-        padding: 5px 0;
+        padding: 15px 0;
         border-radius: 0;
         text-shadow:0 1px 1px rgba(0, 0, 0, 0.5)
       }
@@ -66,7 +66,12 @@
       background: transparent;
       border: 0;
       box-shadow: none;
-      text-decoration: underline;
+      text-decoration: none;
+      
+      > span {
+        padding-bottom: 3px;
+        border-bottom: 2px solid white;
+      }
     }
     
     > li > a:focus {
@@ -90,13 +95,17 @@
 
     .nav {
       margin-left: $logoWidth + 10px; 
-      margin-top: 15px; /* centers navigation text on the logo */
+      margin-top: 5px; /* centers navigation text on the logo */
       width: inherit;
 
       > li {
         float: left !important;
         width: 50% !important;
         text-align: center !important;
+
+        > a {
+          padding: 10px 0;
+        }
       }
       > li.divider {
         display: none;
@@ -120,7 +129,7 @@
     }
 
     .nav {
-      margin-top: 30px; /* centers navigation text on the logo */
+      margin-top: 20px; /* centers navigation text on the logo */
     }
   }
 }
@@ -129,6 +138,10 @@
 	.navbar {
 		.nav {
     	font-size: 12px;
+
+      li  > a {
+        padding: 5px 0;
+      }
     }
   }
   
